--- a/css/apps/files_sharing.scss
+++ b/css/apps/files_sharing.scss
@@ -43,3 +43,7 @@
         }
     }
 }
+
+.sharingTabDetailsView #share-date-picker {
+    color-scheme: var(--nmc-color-sceme);
+}
